GRAD2-2393: removed the code smells complained by sonar code quality.
GRAD2-2393: removed the code smells complained by sonar code quality.